--- a/ASP.NET_FisrtProject/Views/Home/Add.cshtml
+++ b/ASP.NET_FisrtProject/Views/Home/Add.cshtml
@@ -30,6 +30,12 @@ else
             </div>
         </div>
         <div class="form-group">
+            <label for="Nickname" class="col-md-2 control-label">Никнейм:</label>
+            <div class="col-md-4">
+                <input type="text" name="Nickname" class="form-control" required="" placeholder="mouse71rus" />
+            </div>
+        </div>
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" class="btn btn-default" value="Добавить" />
             </div>
